--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -236,8 +236,8 @@
    <widget class="QLineEdit" name="search">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>30</y>
+      <x>330</x>
+      <y>70</y>
       <width>431</width>
       <height>31</height>
      </rect>
@@ -254,8 +254,8 @@
    <widget class="QPushButton" name="okSearch">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>30</y>
+      <x>820</x>
+      <y>70</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -316,14 +316,14 @@
    <widget class="QPushButton" name="clearSearchField">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>30</y>
+      <x>730</x>
+      <y>70</y>
       <width>31</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image:url(/home/otruvin/QtProject/Curs-work/icons/clear_search.png);</string>
+     <string notr="true">border-image:url(C:/Users/Admin/Desktop/Curs-work/icons/clear_search.png);</string>
     </property>
     <property name="text">
      <string/>
@@ -463,6 +463,22 @@
      <string>Показать погоду на данный момент</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>10</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image:url(C:/Users/Admin/Desktop/Curs-work/icons/options.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -470,7 +486,7 @@
      <x>0</x>
      <y>0</y>
      <width>999</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
