--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,8 +20,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>130</y>
+      <x>390</x>
+      <y>200</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -38,8 +38,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>170</y>
+      <x>390</x>
+      <y>240</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -56,8 +56,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>220</y>
+      <x>390</x>
+      <y>290</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -74,8 +74,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>270</y>
+      <x>390</x>
+      <y>340</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -92,8 +92,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>310</y>
+      <x>390</x>
+      <y>380</y>
       <width>321</width>
       <height>41</height>
      </rect>
@@ -110,9 +110,9 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>360</y>
-      <width>251</width>
+      <x>390</x>
+      <y>430</y>
+      <width>301</width>
       <height>31</height>
      </rect>
     </property>
@@ -128,10 +128,10 @@
    <widget class="QLabel" name="weatherDescrL">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>136</y>
-      <width>221</width>
-      <height>21</height>
+      <x>500</x>
+      <y>200</y>
+      <width>291</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -146,9 +146,9 @@
    <widget class="QLabel" name="pressureL">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>170</y>
-      <width>121</width>
+      <x>510</x>
+      <y>240</y>
+      <width>241</width>
       <height>31</height>
      </rect>
     </property>
@@ -164,9 +164,9 @@
    <widget class="QLabel" name="humidityL">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>220</y>
-      <width>101</width>
+      <x>530</x>
+      <y>290</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -182,9 +182,9 @@
    <widget class="QLabel" name="temperatureL">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>270</y>
-      <width>111</width>
+      <x>550</x>
+      <y>340</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
@@ -200,9 +200,9 @@
    <widget class="QLabel" name="maxTemperatureL">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>310</y>
-      <width>111</width>
+      <x>720</x>
+      <y>380</y>
+      <width>121</width>
       <height>41</height>
      </rect>
     </property>
@@ -218,9 +218,9 @@
    <widget class="QLabel" name="minTemperatureL">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>360</y>
-      <width>91</width>
+      <x>710</x>
+      <y>430</y>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -284,7 +284,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
+      <pointsize>9</pointsize>
      </font>
     </property>
     <property name="text">
@@ -297,7 +297,7 @@
       <x>40</x>
       <y>0</y>
       <width>221</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -405,8 +405,8 @@
    <widget class="QComboBox" name="choiseMetricTemperature">
     <property name="geometry">
      <rect>
-      <x>760</x>
-      <y>280</y>
+      <x>870</x>
+      <y>350</y>
       <width>51</width>
       <height>25</height>
      </rect>
@@ -479,6 +479,24 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="selectedCountryAndCity">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>140</y>
+      <width>461</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -486,7 +504,7 @@
      <x>0</x>
      <y>0</y>
      <width>999</width>
-     <height>26</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
